Sculpt Mode: Smooth Normals don't properly update while sculpting #107123

Closed
opened 2023-04-19 11:29:44 +02:00 by Julien Kaspar · 3 comments
Member

System Information
Operating system: Linux-6.2.11-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits, X11 UI
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03

Blender Version
Broken: version: 3.6.0 Alpha, branch: HEAD (modified), commit date: 2023-04-18 17:38, hash: 4edcae75aa0d
Worked: (newest version of Blender that worked as expected)

Short description of error
This has been a long lasting issue for many releases.
When using smooth normals the results are not expected to be fully accurate anyway. Object more is the 'true' shading result.
The issue instead is that sculpt mode does not properly update the smooth shading between strokes, which leads to a constant false perception of the sculpting results.

Exact steps for others to reproduce the error

  • Subdivide a cube 4 times
  • Use "Shade Smooth"
  • Enter sculpt mode
  • Do repeated strokes with the Clay brush and observe the surface shading
**System Information** Operating system: Linux-6.2.11-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits, X11 UI Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03 **Blender Version** Broken: version: 3.6.0 Alpha, branch: HEAD (modified), commit date: 2023-04-18 17:38, hash: `4edcae75aa0d` Worked: (newest version of Blender that worked as expected) **Short description of error** This has been a long lasting issue for many releases. When using smooth normals the results are not expected to be fully accurate anyway. Object more is the 'true' shading result. The issue instead is that sculpt mode does not properly update the smooth shading between strokes, which leads to a constant false perception of the sculpting results. **Exact steps for others to reproduce the error** - Subdivide a cube 4 times - Use "Shade Smooth" - Enter sculpt mode - Do repeated strokes with the Clay brush and observe the surface shading
Julien Kaspar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-19 11:29:45 +02:00
Philipp Oeser added
Module
Sculpt, Paint & Texture
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-19 11:35:11 +02:00
Member

Confirmed

Confirmed
Julien Kaspar added
Type
Bug
and removed
Type
Report
labels 2023-04-24 14:47:43 +02:00
Member

To solve this we need to update not just the marked vertices but the first topological ring around them too. The current PBVH_FACES normal calc code cannot handle this as it operates at the PBVHNode level, and there's no way to get the owning node of a vertex to add it to the list of nodes to be processed.

As I see it there are two solutions:

  • Add a node index vertex attribute, as is done in PBVH_BMESH.
  • Rewrite the normal calc code to build a list of vertices, and then calculate the normals using pbvh->pmap instead of the current approach that iterates over node triangles and adds their normals to verts. This would require maintaining a normal attribute inside of faces.
To solve this we need to update not just the marked vertices but the first topological ring around them too. The current PBVH_FACES normal calc code cannot handle this as it operates at the `PBVHNode` level, and there's no way to get the owning node of a vertex to add it to the list of nodes to be processed. As I see it there are two solutions: * Add a node index vertex attribute, as is done in PBVH_BMESH. * Rewrite the normal calc code to build a list of vertices, and then calculate the normals using `pbvh->pmap` instead of the current approach that iterates over node triangles and adds their normals to verts. This would require maintaining a normal attribute inside of faces.
Member

See pull request #107456

See pull request #107456
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-09 22:36:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107123
No description provided.