Fix #107123: Refactor sculpt normal calculation to require vert poly map

TODO: Proper description of change